--- a/packages/client/src/styles/index.css
+++ b/packages/client/src/styles/index.css
@@ -1,5 +1,11 @@
 @import "@blueprintjs/core/lib/css/blueprint.css";
+@import "@blueprintjs/select/lib/css/blueprint-select.css";
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN',
+      'Hiragino Sans', Meiryo, sans-serif;
+}
